# meson

./: mypy.ini  run_project_tests.py  run_tests.py  run_unittests.py
.github/workflows/: ci_frameworks.yml  fortran_coarrays.yml  lint_mypy.yml  unusedargs_missingreturn.yml
docs/markdown/: Dependencies.md  Reference-tables.md
docs/markdown/snippets/: cmake_components.md  lapack.md
mesonbuild/: build.py  coredata.py  environment.py  interpreter.py  linkers.py
mesonbuild/backend/: ninjabackend.py
mesonbuild/compilers/: __init__.py  c.py  compilers.py  cpp.py  d.py  fortran.py
mesonbuild/compilers/mixins/: arm.py  ccrx.py  clike.py  gnu.py  pgi.py
mesonbuild/dependencies/: __init__.py  base.py  coarrays.py  hdf5.py  lapack.py  misc.py  mpi.py
test cases/common/100 stringdef/: meson.build
test cases/common/107 has header symbol/: meson.build
test cases/common/108 has arg/: meson.build
test cases/common/111 spaces backslash/: meson.build
test cases/common/114 allgenerate/: meson.build
test cases/common/119 subproject project arguments/: meson.build
test cases/common/13 pch/: meson.build
test cases/common/13 pch/cpp/: meson.build
test cases/common/2 cpp/: meson.build
test cases/common/204 function attributes/: meson.build
test cases/common/21 global arg/: meson.build
test cases/common/22 target arg/: meson.build
test cases/common/30 try compile/: meson.build
test cases/common/32 sizeof/: meson.build
test cases/common/34 has header/: meson.build
test cases/common/36 tryrun/: meson.build
test cases/common/39 has function/: meson.build
test cases/common/40 has member/: meson.build
test cases/common/41 alignment/: meson.build
test cases/common/44 test args/: meson.build
test cases/common/6 linkshared/: meson.build
test cases/common/61 multiple generators/: meson.build
test cases/common/7 mixed/: meson.build
test cases/common/79 has type/: meson.build
test cases/common/85 add language/: meson.build
test cases/common/90 default options/: meson.build
test cases/common/92 default library/: meson.build
test cases/common/93 selfbuilt custom/: meson.build
test cases/common/98 threads/: meson.build
test cases/fortran/13 coarray/: meson.build
test cases/fortran/16 openmp/: meson.build
test cases/fortran/9 cpp/: meson.build
test cases/frameworks/17 mpi/: main.cpp  meson.build
test cases/frameworks/25 hdf5/: meson.build
test cases/frameworks/31 lapack/: main.c  main.f90  meson.build
